--- a/wpa_supplicant.conf
+++ b/wpa_supplicant.conf
@@ -2,7 +2,7 @@ ctrl_interface=DIR=/var/run/wpa_supplicant
 country=US
 update_config=1
 network={
-	ssid="Your_SSID"
-	psk="Your_Password"
+	ssid="102-4"
+	psk="hansung102"
 	key_mgmt=WPA-PSK
 }
